- Finished moving all objtypes between 0x4000 and 0x9fff to 0xa000 and above - Finished moving custom items to their respective new index - Added realm-awareness to some more scripts - Started work on custom housing

--- a/099/pkg/drocket/itemdesc.cfg
+++ b/099/pkg/drocket/itemdesc.cfg
@@ -1,10 +1,11 @@
 
-Item 0x7087
+Item 0x17087
 {
 	Name			maskclaimdeed
 	Graphic		0x14EF
 	desc			mask claim deed
 	script		:drocket:maskdeed
+	OldObjtype 0x7087
 }
 
 Item 0xBE34
