--- a/099/pkg/items/containers/itemdesc.cfg
+++ b/099/pkg/items/containers/itemdesc.cfg
@@ -718,7 +718,7 @@ Container 0x0E7a
 //  Special WoD items
 ///////////////////
 
-Container 0x2868
+Container 0xa04c
 {
 	Name				wickerbasket
 	Gump				0x0041
@@ -735,9 +735,10 @@ Container 0x2868
 	CanRemoveScript	canremove_chest
 	OnInsertScript		oninsert_chest
 	CanInsertScript	caninsert_chest
+	OldObjtype 0x2868
 }
 
-Container 0x28A0
+Container 0xa05e
 {
 	Name				winerack
 	Gump				0x004d
@@ -755,9 +756,10 @@ Container 0x28A0
 	CanRemoveScript	canremove_chest
 	OnInsertScript		oninsert_chest
 	CanInsertScript	caninsert_chest
+	OldObjtype 0x28a0
 }
 
-Container 0x278b
+Container 0x2bdb
 {
 	Name				stocking
 	Gump				0x003D
@@ -772,4 +774,5 @@ Container 0x278b
 	CanRemoveScript	canremove_chest
 	OnInsertScript		oninsert_chest
 	CanInsertScript	caninsert_chest
+	OldObjtype 0x278b
 }
