--- a/099/pkg/items/decorations/decoration_dragon_statue_ns.cfg
+++ b/099/pkg/items/decorations/decoration_dragon_statue_ns.cfg
@@ -1,6 +1,6 @@
 item 1
 {
-	objtype	0x283c
+	objtype	0xa09d
 	x		-4
 	y		2
 	z		0
@@ -11,7 +11,7 @@ item 1
 
 item 2
 {
-	objtype	0x283d
+	objtype	0xa09e
 	x		-3
 	y		1
 	z		0
@@ -22,7 +22,7 @@ item 2
 
 item 3
 {
-	objtype	0x283e
+	objtype	0xa09f
 	x		-3
 	y		0
 	z		0
@@ -33,7 +33,7 @@ item 3
 
 item 4
 {
-	objtype	0x283f
+	objtype	0xa0a0
 	x		-2
 	y		0
 	z		0
@@ -44,7 +44,7 @@ item 4
 
 item 5
 {
-	objtype	0x2840
+	objtype	0xa0a1
 	x		-1
 	y		0
 	z		0
@@ -55,7 +55,7 @@ item 5
 
 item 6
 {
-	objtype	0x2841
+	objtype	0xa0a2
 	x		0
 	y		0
 	z		0
@@ -66,7 +66,7 @@ item 6
 
 item 7
 {
-	objtype	0x2842
+	objtype	0xa0a3
 	x		1
 	y		0
 	z		0
@@ -77,7 +77,7 @@ item 7
 
 item 8
 {
-	objtype	0x2843
+	objtype	0xa0a4
 	x		2
 	y		0
 	z		0
@@ -88,7 +88,7 @@ item 8
 
 item 9
 {
-	objtype	0x2844
+	objtype	0xa0a5
 	x		3
 	y		0
 	z		0
@@ -99,7 +99,7 @@ item 9
 
 item 10
 {
-	objtype	0x2845
+	objtype	0xa0a6
 	x		2
 	y		-1
 	z		0
