--- a/099/pkg/items/decorations/decoration_piano_ew.cfg
+++ b/099/pkg/items/decorations/decoration_piano_ew.cfg
@@ -1,6 +1,6 @@
 item 1
 {
-	objtype	10285
+	objtype	0xa02a
 	x		0
 	y		0
 	z		0
@@ -11,7 +11,7 @@ item 1
 
 item 2
 {
-	objtype	10286
+	objtype	0xa02b
 	x		0
 	y		-1
 	z		0
@@ -22,7 +22,7 @@ item 2
 
 item 3
 {
-	objtype	10287
+	objtype	0xa02c
 	x		-1
 	y		0
 	z		0
