--- a/099/pkg/items/decorations/rotate.cfg
+++ b/099/pkg/items/decorations/rotate.cfg
@@ -941,243 +941,244 @@ graphic 0x1E6D
 	newgraphic 0x1E66
 }
 
-graphic 0x278b
-{
-	//stocking
-	newgraphic 0x278c
-}
+//graphic 0x278b
+//{
+//	//stocking
+//	newgraphic 0x278c
+//}
 
-graphic 0x278c
-{
-	//stocking
-	newgraphic 0x278b
-}
+//graphic 0x278c
+//{
+//	//stocking
+//	newgraphic 0x278b
+//}
 
-graphic 0x2850
-{
-	//jack-o-lantern
-	newgraphic 0x2854
-}
-graphic 0x2854
-{
-	//jack-o-lantern
-	newgraphic 0x2850
-}
+//graphic 0x2850
+//{
+//	//jack-o-lantern
+//	newgraphic 0x2854
+//}
+//graphic 0x2854
+//{
+//	//jack-o-lantern
+//	newgraphic 0x2850
+//}
 
-graphic 0x2851
-{
-	//jack-o-lantern
-	newgraphic 0x2855
-}
+//graphic 0x2851
+//{
+//	//jack-o-lantern
+//	newgraphic 0x2855
+//}
 
-graphic 0x2855
-{
-	//jack-o-lantern
-	newgraphic 0x2851
-}
+//graphic 0x2855
+//{
+//	//jack-o-lantern
+//	newgraphic 0x2851
+//}
 
-graphic 0x2866
+
+graphic 0xa04a
 {
 	//broom
-	newgraphic 0x2867
+	newgraphic 0xa04b
 }
 
-graphic 0x2867
+graphic 0xa04b
 {
 	//broom
-	newgraphic 0x2866
+	newgraphic 0xa04a
 }
 
-graphic 0x2882
+graphic 0xa059
 {
 	//ghost cutout
-	newgraphic 0x2883
+	newgraphic 0xa05a
 }
 
-graphic 0x2883
+graphic 0xa05a
 {
 	//ghost cutout
-	newgraphic 0x2882
+	newgraphic 0xa059
 }
 
-graphic 0x28A0
+graphic 0xa05e
 {
 	//wine rack
-	newgraphic 0x28A1
+	newgraphic 0xa05f
 }
 
-graphic 0x28A1
+graphic 0xa05f
 {
 	//wine rack
-	newgraphic 0x28A2
+	newgraphic 0xa060
 }
 
-graphic 0x28A2
+graphic 0xa060
 {
 	//wine rack
-	newgraphic 0x28A3
+	newgraphic 0xa061
 }
 
-graphic 0x28A3
+graphic 0xa061
 {
 	//wine rack
-	newgraphic 0x28A4
+	newgraphic 0xa062
 }
 
-graphic 0x28A4
+graphic 0xa062
 {
 	//wine rack
-	newgraphic 0x28A5
+	newgraphic 0xa063
 }
 
-graphic 0x28A5
+graphic 0xa063
 {
 	//wine rack
-	newgraphic 0x28A6
+	newgraphic 0xa064
 }
 
-graphic 0x28A6
+graphic 0xa064
 {
 	//wine rack
-	newgraphic 0x28A7
+	newgraphic 0xa065
 }
 
-graphic 0x28A7
+graphic 0xa065
 {
 	//wine rack
-	newgraphic 0x28A8
+	newgraphic 0xa066
 }
 
-graphic 0x28A8
+graphic 0xa066
 {
 	//wine rack
-	newgraphic 0x28A9
+	newgraphic 0xa067
 }
 
-graphic 0x28A9
+graphic 0xa067
 {
 	//wine rack
-	newgraphic 0x28A0
+	newgraphic 0xa05e
 }
 
-graphic 0x2968
+graphic 0xa081
 {
 	//painting
-	newgraphic 0x2969
+	newgraphic 0xa082
 }
 
-graphic 0x2969
+graphic 0xa082
 {
 	//painting
-	newgraphic 0x2968
+	newgraphic 0xa081
 }
 
-graphic 0x296a
+graphic 0xa083
 {
 	//painting
-	newgraphic 0x296b
+	newgraphic 0xa084
 }
 
-graphic 0x296b
+graphic 0xa084
 {
 	//painting
-	newgraphic 0x296a
+	newgraphic 0xa083
 }
 
-graphic 0x296c
+graphic 0xa085
 {
 	//painting
-	newgraphic 0x296d
+	newgraphic 0xa086
 }
 
-graphic 0x296d
+graphic 0xa086
 {
 	//painting
-	newgraphic 0x296c
+	newgraphic 0xa085
 }
 
-graphic 0x296e
+graphic 0xa087
 {
 	//painting
-	newgraphic 0x296f
+	newgraphic 0xa088
 }
 
-graphic 0x296f
+graphic 0xa088
 {
 	//painting
-	newgraphic 0x296e
+	newgraphic 0xa087
 }
 
-graphic 0x2970
+graphic 0xa089
 {
 	//painting
-	newgraphic 0x2971
+	newgraphic 0xa08a
 }
 
-graphic 0x2971
+graphic 0xa08a
 {
 	//painting
-	newgraphic 0x2970
+	newgraphic 0xa089
 }
 
-graphic 0x2972
+graphic 0xa08b
 {
 	//painting
-	newgraphic 0x2973
+	newgraphic 0xa08c
 }
 
-graphic 0x2973
+graphic 0xa08c
 {
 	//painting
-	newgraphic 0x2972
+	newgraphic 0xa08b
 }
 
-graphic 0x2974
+graphic 0xa08d
 {
 	//painting
-	newgraphic 0x2975
+	newgraphic 0xa08e
 }
 
-graphic 0x2975
+graphic 0xa08e
 {
 	//painting
-	newgraphic 0x2974
+	newgraphic 0xa08d
 }
 
-graphic 0x2976
+graphic 0xa08f
 {
 	//painting
-	newgraphic 0x2977
+	newgraphic 0xa090
 }
 
-graphic 0x2977
+graphic 0xa090
 {
 	//painting
-	newgraphic 0x2976
+	newgraphic 0xa08f
 }
 
-graphic 0x2978
+graphic 0xa091
 {
 	//painting
-	newgraphic 0x2979
+	newgraphic 0xa092
 }
 
-graphic 0x2979
+graphic 0xa092
 {
 	//painting
-	newgraphic 0x2978
+	newgraphic 0xa091
 }
 
-graphic 0x297a
+graphic 0xa093
 {
 	//painting
-	newgraphic 0x297b
+	newgraphic 0xa094
 }
 
-graphic 0x297b
+graphic 0xa094
 {
 	//painting
-	newgraphic 0x297a
+	newgraphic 0xa093
 }
 
 graphic 0x3dff
