--- a/099/pkg/items/games/itemdesc.cfg
+++ b/099/pkg/items/games/itemdesc.cfg
@@ -1,4 +1,4 @@
-Container 0x70b0
+Container 0x170b0
 {
 	Name				checkerboard
 	Graphic			0xfa6
@@ -13,9 +13,10 @@ Container 0x70b0
 	CreateScript		checkerboard_oncreate
 	CanInsertScript	gameboard_caninsert
 	OnRemoveScript		gameboard_onremove
+	OldObjtype 0x70b0
 }
 
-Container 0x70b1
+Container 0x170b1
 {
 	Name				chessboard
 	Graphic			0xfa6
@@ -30,9 +31,10 @@ Container 0x70b1
 	CreateScript		chessboard_oncreate
 	CanInsertScript	gameboard_caninsert
 	OnRemoveScript		gameboard_onremove
+	OldObjtype 0x70b1
 }
 
-Container 0x70b2
+Container 0x170b2
 {
 	Name				backgammon
 	Graphic			0xe1c
@@ -47,13 +49,15 @@ Container 0x70b2
 	CreateScript		backgammonboard_oncreate
 	CanInsertScript	gameboard_caninsert
 	OnRemoveScript		gameboard_onremove
+	OldObjtype 0x70b2
 }
 
-item 0x70b3
+item 0x170b3
 {
 	name				dontcreateme_gamepiece
 	graphic			0xfa8
 	script			gamepiece
 	DestroyScript		gamepiece_destroy
 	ControlScript		gamepiece_control
+	OldObjtype 0x70b3
 }
