--- a/099/pkg/items/lighting/itemdesc.cfg
+++ b/099/pkg/items/lighting/itemdesc.cfg
@@ -595,10 +595,12 @@ Item 0x1810
 	script		torch
 }
 
-Item 0x2850
+Item 0xa038
 {
 	name			jackolantern
 	script		torch
+	OldObjtype 0x2850
+	SaveOnExit 0
 }
 
 
