--- a/099/pkg/items/traps/itemdesc.cfg
+++ b/099/pkg/items/traps/itemdesc.cfg
@@ -1,10 +1,11 @@
-Item 0x7081
+Item 0x17081
 {
 	Name			magictrap
 	graphic		0x911
 	Desc			
 	WalkOnScript	walkon_magictrap
 	movable		0
+	OldObjtype 0x7081
 }
 
 
