--- a/099/pkg/skills/craftingskills/alchemy/itemdesc.cfg
+++ b/099/pkg/skills/craftingskills/alchemy/itemdesc.cfg
@@ -317,7 +317,7 @@ Item 0x1709b
 {
 	Name			EssenceOfFlame
 	Desc			essence of flame potion
-	Graphic		10509
+	Graphic		0xa07d
 	Color		1259
 	Script		essencepotion
 	movable		1
@@ -329,7 +329,7 @@ Item 0x1709c
 {
 	Name			EssenceOfElectricity
 	Desc			essence of electricity potion
-	Graphic		10509
+	Graphic		0xa07d
 	Color		1152
 	Script		essencepotion
 	movable		1
@@ -341,7 +341,7 @@ Item 0x1709d
 {
 	Name			EssenceOfFrost
 	Desc			essence of frost potion
-	Graphic		10509
+	Graphic		0xa07d
 	Color		1265
 	Script		essencepotion
 	movable		1
@@ -370,7 +370,7 @@ Item 0xdc20
 {
 	Name			invisibilitypotion
 	Desc			invisibility potion
-	Graphic		10505
+	Graphic		0xa079
 	Color		1175
 	script		advanced_potions
 	movable		1
@@ -384,7 +384,7 @@ Item 0xdc21
 {
 	Name			fandelsfineintellectpotion
 	Desc			Phandel's Fine Intellect potion
-	Graphic		10510
+	Graphic		0xa07e
 	Color		1719
 	script		advanced_potions
 	movable		1
@@ -400,7 +400,7 @@ Item 0xdc22
 {
 	Name			phandelsfantasticintellectpotion
 	Desc			Phandel's Fantastic Intellect potion
-	Graphic		10510
+	Graphic		0xa07e
 	Color		1727
 	script		advanced_potions
 	movable		1
@@ -416,7 +416,7 @@ Item 0xdc23
 {
 	Name			lesserMegoInvulnerabilitypotion
 	Desc			lesser Mego Invulnerability potion
-	Graphic		10501
+	Graphic		0xa075
 	Color		1310
 	script		advanced_potions
 	movable		1
@@ -432,7 +432,7 @@ Item 0xdc24
 {
 	Name			greaterMegoInvulnerabilitypotion
 	Desc			greater Mego Invulnerability potion
-	Graphic		10501
+	Graphic		0xa075
 	Color		1318
 	script		advanced_potions
 	movable		1
@@ -448,7 +448,7 @@ Item 0xdc25
 {
 	Name			HomericMightpotion
 	Desc			Homeric Might potion
-	Graphic		10503
+	Graphic		0xa077
 	Color		848
 	script		advanced_potions
 	movable		1
@@ -464,7 +464,7 @@ Item 0xdc26
 {
 	Name			GreaterHomericMightpotion
 	Desc			Greater Homeric Might potion
-	Graphic		10503
+	Graphic		0xa077
 	Color		850
 	script		advanced_potions
 	movable		1
@@ -480,7 +480,7 @@ Item 0xdc27
 {
 	Name			TamlaHealpotion
 	Desc			Tamla Heal potion
-	Graphic		10509
+	Graphic		0xa07d
 	Color		2125
 	script		advanced_potions
 	movable		1
@@ -496,7 +496,7 @@ Item 0xdc28
 {
 	Name			TaintsMinorTransmutationpotion
 	Desc			Taint's Minor Transmutation potion
-	Graphic		10512
+	Graphic		0xa080
 	Color		1446
 	script		advanced_potions
 	movable		1
@@ -512,7 +512,7 @@ Item 0xdc29
 {
 	Name			TaintsMajorTransmutationpotion
 	Desc			Taint's Major Transmutation potion
-	Graphic		10512
+	Graphic		0xa080
 	Color		1450
 	script		advanced_potions
 	movable		1
@@ -539,7 +539,7 @@ Item 0xdc2b
 {
 	Name			Elixer
 	Desc			elixer
-	Graphic		10505
+	Graphic		0xa079
 	Color		1287
 	script		humuc_totem
 	movable		1
