--- a/099/pkg/skills/craftingskills/carpentry/itemdesc.cfg
+++ b/099/pkg/skills/craftingskills/carpentry/itemdesc.cfg
@@ -82,12 +82,13 @@ Item 0x102a
 	VendorBuysFor	10
 }
 
-Item 0x7090
+Item 0x17090
 {
 	Name			FurnitureDyeTub
 	Desc			furniture dye tub
 	Graphic		0x0FAB
 	Script		furniture_dye_tub
+	OldObjtype 0x7090
 }
 
 
