--- a/099/pkg/items/decorations/decoration_marble_horse_ew.cfg
+++ b/099/pkg/items/decorations/decoration_marble_horse_ew.cfg
@@ -1,6 +1,6 @@
 item 1
 {
-	objtype	0x28c0
+	objtype	0xa072
 	x		0
 	y		0
 	z		0
@@ -11,7 +11,7 @@ item 1
 
 item 2
 {
-	objtype	0x28c1
+	objtype	0xa073
 	x		1
 	y		0
 	z		0
