--- a/099/pkg/items/decorations/decoration_marble_horse_ns.cfg
+++ b/099/pkg/items/decorations/decoration_marble_horse_ns.cfg
@@ -1,6 +1,6 @@
 item 1
 {
-	objtype	0x28bf
+	objtype	0xa071
 	x		0
 	y		0
 	z		0
@@ -11,7 +11,7 @@ item 1
 
 item 2
 {
-	objtype	0x28be
+	objtype	0xa070
 	x		0
 	y		1
 	z		0
