--- a/099/pkg/items/decorations/decoration_piano_ns.cfg
+++ b/099/pkg/items/decorations/decoration_piano_ns.cfg
@@ -1,6 +1,6 @@
 item 1
 {
-	objtype	10280
+	objtype	0xa027
 	x		0
 	y		0
 	z		0
@@ -11,7 +11,7 @@ item 1
 
 item 2
 {
-	objtype	10281
+	objtype	0xa028
 	x		-1
 	y		0
 	z		0
@@ -22,7 +22,7 @@ item 2
 
 item 3
 {
-	objtype	10282
+	objtype	0xa029
 	x		0
 	y		-1
 	z		0
