--- a/099/pkg/npcs/shrunknpcs/itemdesc.cfg
+++ b/099/pkg/npcs/shrunknpcs/itemdesc.cfg
@@ -1,4 +1,4 @@
-Container 0x70bc
+Container 0x170bc
 {
 	Name				ShrunkNPC
 	Graphic			0x14EB
@@ -13,6 +13,7 @@ Container 0x70bc
 	MaxItems			65535
 	Maxweight			65535
 	CanInsertScript	caninsert_totem
+	OldObjtype 0x70bc
 }
 
 
