--- a/099/pkg/npcs/townfolk/giftwrapper/itemdesc.cfg
+++ b/099/pkg/npcs/townfolk/giftwrapper/itemdesc.cfg
@@ -1,4 +1,4 @@
-Container 0x70b4
+Container 0x170b4
 {
 	Name				giftwrapped_present
 	Graphic			0x9b2
@@ -12,37 +12,46 @@ Container 0x70b4
 	script			open_present
 	MaxItems			65535
 	Maxweight			65535
+	OldObjtype 0x70b4
 }
 
-Item 0x2832
+Item 0xa02d
 {
 	Name		present_red_bow
+	OldObjtype		0x2832
 }
-Item 0x2833
+Item 0xa02e
 {
 	Name		present_yellow_bow
+	OldObjtype		0x2833
 }
-Item 0x2834
+Item 0xa02f
 {
 	Name		present_blue_bow
+	OldObjtype		0x2834
 }
-Item 0x2835
+Item 0xa030
 {
 	Name		present_pink_bow
+	OldObjtype		0x2835
 }
-Item 0x2836
+Item 0xa031
 {
 	Name		present_green_bow
+	OldObjtype		0x2836
 }
-Item 0x2837
+Item 0xa032
 {
 	Name		present_white_bow
+	OldObjtype		0x2837
 }
-Item 0x2838
+Item 0xa033
 {
 	Name		present_light_blue_bow
+	OldObjtype		0x2838
 }
-Item 0x2839
+Item 0xa034
 {
 	Name		present_purple_bow
+	OldObjtype		0x2839
 }
