--- a/099/pkg/skills/craftingskills/blacksmithy/itemdesc.cfg
+++ b/099/pkg/skills/craftingskills/blacksmithy/itemdesc.cfg
@@ -6,7 +6,7 @@ Item 0x0FBB
 	vendorsellsfor		30
 }
 
-Item 0x70d0
+Item 0x170d0
 {
 	Name				BlacksmithySpecialOrderContract
 	Name				BlacksmithyBulkOrderDeed
@@ -15,4 +15,5 @@ Item 0x70d0
 	RequiresAttention	0
 	CreateScript		:blacksmithy:createscript_bulk_order_deed
 	Script			:blacksmithy:bulk_order_deed
+	OldObjtype 0x70d0
 }
