--- a/trunk/099/pkg/drocket/itemdesc.cfg
+++ b/trunk/099/pkg/drocket/itemdesc.cfg
@@ -1,10 +1,11 @@
 
-Item 0x7087
+Item 0x17087
 {
 	Name			maskclaimdeed
 	Graphic		0x14EF
 	desc			mask claim deed
 	script		:drocket:maskdeed
+	OldObjtype 0x7087
 }
 
 Item 0xBE34
