--- a/trunk/099/pkg/items/decorations/decoration_dragon_statue_ew.cfg
+++ b/trunk/099/pkg/items/decorations/decoration_dragon_statue_ew.cfg
@@ -1,6 +1,6 @@
 item 1
 {
-	objtype	0x2846
+	objtype	0xa0a7
 	x		-1
 	y		2
 	z		0
@@ -11,7 +11,7 @@ item 1
 
 item 2
 {
-	objtype	0x2847
+	objtype	0xa0a8
 	x		0
 	y		3
 	z		0
@@ -22,7 +22,7 @@ item 2
 
 item 3
 {
-	objtype	0x2848
+	objtype	0xa0a9
 	x		0
 	y		2
 	z		0
@@ -33,7 +33,7 @@ item 3
 
 item 4
 {
-	objtype	0x2849
+	objtype	0xa0aa
 	x		0
 	y		1
 	z		0
@@ -44,7 +44,7 @@ item 4
 
 item 5
 {
-	objtype	0x284a
+	objtype	0xa0ab
 	x		0
 	y		0
 	z		0
@@ -55,7 +55,7 @@ item 5
 
 item 6
 {
-	objtype	0x284b
+	objtype	0xa0ac
 	x		0
 	y		-1
 	z		0
@@ -66,7 +66,7 @@ item 6
 
 item 7
 {
-	objtype	0x284c
+	objtype	0xa0ad
 	x		0
 	y		-2
 	z		0
@@ -77,7 +77,7 @@ item 7
 
 item 8
 {
-	objtype	0x284d
+	objtype	0xa0ae
 	x		0
 	y		-3
 	z		0
@@ -88,7 +88,7 @@ item 8
 
 item 9
 {
-	objtype	0x284e
+	objtype	0xa0af
 	x		1
 	y		-3
 	z		0
@@ -99,7 +99,7 @@ item 9
 
 item 10
 {
-	objtype	0x284f
+	objtype	0xa0b0
 	x		2
 	y		-4
 	z		0
