--- a/trunk/099/pkg/items/decorations/itemdesc.cfg
+++ b/trunk/099/pkg/items/decorations/itemdesc.cfg
@@ -922,7 +922,7 @@ Item  0x11e5
 
 
 
-Container 0x70a1
+Container 0x170a1
 {
 	Name				DisplayCase
 	graphic			0x0a53
@@ -941,7 +941,7 @@ Container 0x70a1
 	script			displaycase
 }
 
-Item  0x70a2
+Item  0x170a2
 {
 	Name			decoratortool
 	Desc			decorator tool
@@ -1005,48 +1005,208 @@ Item 0x0EA0 //N wall large painting
 //  Items added in the WoD files
 ///////////////////
 
-Item 0x285a //Birdbath
+Item 0xa01b
+{
+	Name				fishtank1
+	OldObjtype		0x2814
+}
+
+Item 0xa01c
+{
+	Name				fishtank2
+	OldObjtype		0x2815
+}
+
+Item 0xa01d
+{
+	Name				fishtank3
+	OldObjtype		0x2816
+}
+
+Item 0xa01e
+{
+	Name				fishtank4
+	OldObjtype		0x2817
+}
+
+Item 0xa01f
+{
+	Name				fishtank5
+	OldObjtype		0x2818
+}
+
+Item 0xa020
+{
+	Name				fishtank6
+	OldObjtype		0x2819
+}
+
+Item 0xa021
+{
+	Name				teddybear
+	OldObjtype		0x281e
+}
+
+Item 0xa022
+{
+	Name				teddybearshirt
+	OldObjtype		0x281f
+}
+
+Item 0xa023
+{
+	Name				smallfishtank
+	OldObjtype		0x2820
+}
+
+Item 0xa024
+{
+	Name				stuffedbunny
+	OldObjtype		0x2821
+}
+
+Item 0xa025
+{
+	Name				spicerack1
+	OldObjtype		0x2822
+}
+
+Item 0xa026
+{
+	Name				spicerack2
+	OldObjtype		0x2823
+}
+
+Item 0xa027
+{
+	Name				piano1
+	OldObjtype		0x2828
+}
+
+Item 0xa028
+{
+	Name				piano2
+	OldObjtype		0x2829
+}
+
+Item 0xa029
+{
+	Name				piano3
+	OldObjtype		0x282a
+}
+
+Item 0xa02a
+{
+	Name				piano4
+	OldObjtype		0x282d
+}
+
+Item 0xa02b
+{
+	Name				piano5
+	OldObjtype		0x282e
+}
+
+Item 0xa02c
+{
+	Name				piano6
+	OldObjtype		0x282f
+}
+
+Item 0xa042 //Birdbath
 {
 	Name				birdbath
 	VendorSellsFor		50000
 	movable			1
 	Weight			5
+	OldObjtype		0x285a
 }
 
-Item 0x2865 //copper tea kettle
+Item 0xa048 //copper tea kettle
 {
-	OldObjtype		0x2864
+	OldObjtype		0xa049 0x2864 0x2865
+//	OldObjtype		0x2864
+//	OldObjtype		0x2865
 	Name				copperteakettle
 	VendorSellsFor		50000
 	movable			1
 	Weight			5
 }
 
-Item 0x2869 //large flower vase
+Item 0xa04a
+{
+	Name			broom
+	OldObjtype		0x2866 0x2867 0xa04b
+}
+
+Item 0xa04d //large flower vase
 {
 	Name				largeflowervase
 	VendorSellsFor		50000
 	movable			1
 	Weight			5
+	OldObjtype		0x2869
 }
 
-Item 0x286a //large vase
+Item 0xa04e //large vase
 {
 	Name				largedecoratedvase
 	VendorSellsFor		50000
 	movable			1
 	Weight			5
+	OldObjtype		0x286a
 }
 
-Item 0x286b //large flower urn
+Item 0xa04f //large flower urn
 {
 	Name				largeflowerurn
 	VendorSellsFor		50000
 	movable			1
 	Weight			5
+	OldObjtype		0x286b
 }
 
-Item 0x2882 //ghost cutout (halloween)
+Item 0xa054 //toy soldier
+{
+	Name				toysoldier1
+	movable			1
+	Weight			1
+	OldObjtype		0x2878
+}
+
+Item 0xa055 //toy soldier
+{
+	Name				toysoldier2
+	movable			1
+	Weight			1
+	OldObjtype		0x2879
+}
+
+Item 0xa056 //toy soldier
+{
+	Name				toysoldier3
+	movable			1
+	Weight			1
+	OldObjtype		0x287a
+}
+
+Item 0xa057 //toy soldier
+{
+	Name				toysoldier4
+	movable			1
+	Weight			1
+	OldObjtype		0x287b
+}
+
+Item 0xa058 //toy soldier
+{
+	Name				toysoldier5
+	movable			1
+	Weight			1
+	OldObjtype		0x287c
+}
+
+Item 0xa059 //ghost cutout (halloween)
 {
 	Name				ghostcutout
 	Script			rotate
@@ -1054,6 +1214,200 @@ Item 0x2882 //ghost cutout (halloween)
 	VendorSellsFor		50000
 	movable			1
 	Weight			5
+	OldObjtype		0x2882
+}
+
+Item 0xa05b //cornucopia
+{
+	Name				cornucopia
+	movable			1
+	Weight			5
+	OldObjtype		0x2884
+}
+
+Item 0xa05c //giant spider 1
+{
+	Name				giantspider1
+	movable			0
+	OldObjtype		0x2885
+}
+
+Item 0xa05d //giant spider 2
+{
+	Name				giantspider2
+	movable			0
+	OldObjtype		0x2886
+}
+
+
+
+
+Item 0xa068
+{
+	Name				curtains1
+	OldObjtype		0x28b4
+}
+
+Item 0xa06a
+{
+	Name				curtains3
+	OldObjtype		0x28b6
+}
+
+Item 0xa06c
+{
+	Name				curtains5
+	OldObjtype		0x28b8
+}
+
+Item 0xa06e
+{
+	Name				curtains7
+	OldObjtype		0x28ba
+}
+
+Item 0xa070
+{
+	Name				marblehorse1
+	OldObjtype		0x28be
+}
+
+Item 0xa071
+{
+	Name				marblehorse2
+	OldObjtype		0x28bf
+}
+
+Item 0xa072
+{
+	Name				marblehorse3
+	OldObjtype		0x28c0
+}
+
+Item 0xa073
+{
+	Name				marblehorse4
+	OldObjtype		0x28c1
+}
+
+Item 0xa09d
+{
+	Name				dragonstatue1
+	OldObjtype		0x283c
+}
+
+Item 0xa09e
+{
+	Name				dragonstatue2
+	OldObjtype		0x283d
+}
+
+Item 0xa09f
+{
+	Name				dragonstatue3
+	OldObjtype		0x283e
+}
+
+Item 0xa0a0
+{
+	Name				dragonstatue4
+	OldObjtype		0x283f
+}
+
+Item 0xa0a1
+{
+	Name				dragonstatue5
+	OldObjtype		0x2840
+}
+
+Item 0xa0a2
+{
+	Name				dragonstatue6
+	OldObjtype		0x2841
+}
+
+Item 0xa0a3
+{
+	Name				dragonstatue7
+	OldObjtype		0x2842
+}
+
+Item 0xa0a4
+{
+	Name				dragonstatue8
+	OldObjtype		0x2843
+}
+
+Item 0xa0a5
+{
+	Name				dragonstatue9
+	OldObjtype		0x2844
+}
+
+Item 0xa0a6
+{
+	Name				dragonstatue10
+	OldObjtype		0x2845
+}
+
+Item 0xa0a7
+{
+	Name				dragonstatue11
+	OldObjtype		0x2846
+}
+
+Item 0xa0a8
+{
+	Name				dragonstatue12
+	OldObjtype		0x2847
+}
+
+Item 0xa0a9
+{
+	Name				dragonstatue13
+	OldObjtype		0x2848
+}
+
+Item 0xa0aa
+{
+	Name				dragonstatue14
+	OldObjtype		0x2849
+}
+
+Item 0xa0ab
+{
+	Name				dragonstatue15
+	OldObjtype		0x284a
+}
+
+Item 0xa0ac
+{
+	Name				dragonstatue16
+	OldObjtype		0x284b
+}
+
+Item 0xa0ad
+{
+	Name				dragonstatue17
+	OldObjtype		0x284c
+}
+
+Item 0xa0ae
+{
+	Name				dragonstatue18
+	OldObjtype		0x284d
+}
+
+Item 0xa0af
+{
+	Name				dragonstatue19
+	OldObjtype		0x284e
+}
+
+Item 0xa0b0
+{
+	Name				dragonstatue20
+	OldObjtype		0x284f
 }
 
 
