--- a/trunk/099/pkg/items/housing/itemdesc.cfg
+++ b/trunk/099/pkg/items/housing/itemdesc.cfg
@@ -25,6 +25,7 @@ Item 0x17060
 	ControlScript	staticsigncontrol
 	movable		0
 	Doubleclickrange	6
+	OldObjtype 0x7060
 }
 
 Item 0x1708a
@@ -293,6 +294,18 @@ Item 0x1622F
 	housetype		69736
 }
 
+Item 0x16230
+{
+	Name			foundation18x18deed
+	Desc			deed to 18x18 foundation
+	Graphic		0x14F0
+	Script		housedeed
+	VendorSellsFor	40000
+	BuyPrice		36000
+	housetype		70779
+}
+
+
 ///////////////////
 //All the house definitions
 ///////////////////
@@ -458,5 +471,11 @@ House 0x110a2
 	MultiID		0xa2
 }
 
+House 0x1147b
+{
+	Name			foundation18x18
+	Graphic		0x547b
+	MultiID		0x147b
+}
 
 
