--- a/trunk/099/pkg/magic/magiceffects/itemdesc.cfg
+++ b/trunk/099/pkg/magic/magiceffects/itemdesc.cfg
@@ -77,7 +77,7 @@ Item 0x3979
 	movable		0
 }
 
-item 0x708d
+item 0x1708d
 {
 	name			druidcloak
 	graphic		0x1515
@@ -91,7 +91,7 @@ item 0x708d
 	controlscript	control_cloakofprotection
 }
 
-Item 0x7084
+Item 0x17084
 {
 	Name			lavafield
 	graphic		0x398c
@@ -99,9 +99,10 @@ Item 0x7084
 	movable		0
 	facing		29
 	ControlScript	control_lavafield
+	OldObjtype 0x7084
 }
 
-Item 0x7085
+Item 0x17085
 {
 	Name			frostfield1
 	graphic		0x3915
@@ -111,9 +112,10 @@ Item 0x7085
 	movable		0
 	facing		1
 	ControlScript	control_frostfield
+	OldObjtype 0x7085
 }
 
-Item 0x7086
+Item 0x17086
 {
 	Name			frostfield2
 	graphic		0x3920
@@ -123,4 +125,5 @@ Item 0x7086
 	movable		0
 	facing		1
 	ControlScript	control_frostfield
+	OldObjtype 0x7086
 }
