--- a/trunk/099/pkg/magic/magicitems/itemdesc.cfg
+++ b/trunk/099/pkg/magic/magicitems/itemdesc.cfg
@@ -16,7 +16,7 @@ SpellBook 0x0EFA
 	CanInsertScript		caninsert_spellbook
 }
 
-Item 0x7082
+Item 0x17082
 {
 	Name			manastone
 	Desc			mana stone
@@ -24,6 +24,7 @@ Item 0x7082
 	script		manastone
 	VendorSellsFor	500
 	VendorBuysFor	100
+	OldObjtype 0x7082
 }
 
 Item 0x1f2d
