--- a/trunk/099/pkg/skills/craftingskills/cooking/itemdesc.cfg
+++ b/trunk/099/pkg/skills/craftingskills/cooking/itemdesc.cfg
@@ -932,39 +932,43 @@ Item 0x1e1e
 //                                                       //
 ///////////////////////////////////////////////////////////
 
-Item 0x29cd
+Item 0x2bdd
 {
 	Name			candycane
 	Script		eat
 	Weight		1/2
 	nutrition		6
+	OldObjtype 0x29cd
 }
 
-Item 0x29ce
+Item 0x2be2
 {
 	Name			gingerbreadman
 	Desc			gingerbread m%en/an%
 	Script		eat
 	Weight		1/2
 	nutrition		6
+	OldObjtype 0x29ce
 }
 
-Item 0x28aa
+Item 0xa035
 {
 	Name			giantcake
 	Desc			giant cake
 	Script		eat
 	Weight		3
 	nutrition		10
+	OldObjtype 0x28aa
 }
 
-Item 0x28ab
+Item 0xa036
 {
 	Name			giantcakeslice
 	Desc			a slice of cake
 	Script		eat
 	Weight		1/2
 	nutrition		6
+	OldObjtype 0x28ab
 }
 
 
