--- a/trunk/099/pkg/skills/harvestingskills/farming/itemdesc.cfg
+++ b/trunk/099/pkg/skills/harvestingskills/farming/itemdesc.cfg
@@ -256,7 +256,7 @@ item 0x1aa1
 	replenishperiod		450
 }
 
-item 0x708e
+item 0x1708e
 {
 	name				lettuceplant
 	desc				lettuce plant
@@ -270,7 +270,7 @@ item 0x708e
 	replenishperiod		450
 }
 
-item 0x708f
+item 0x1708f
 {
 	name				cabbageplant
 	desc				cabbage plant
@@ -284,7 +284,7 @@ item 0x708f
 	replenishperiod		450
 }
 
-item 0x70c0
+item 0x170c0
 {
 	name				potatoplant
 	desc				potato plant
@@ -318,7 +318,7 @@ item 0x0caa
 }
 
 //Same with lemon trees
-item 0x2EE1
+item 0xa096
 {
 	name				lemontree
 	script			harvest
@@ -327,6 +327,7 @@ item 0x2EE1
 	product			0x1728
 	maxamount			10
 	replenishperiod	450
+	OldObjtype 0x2ee1
 }
 
 item 0x0d98
@@ -395,7 +396,7 @@ item 0x0da6
 	replenishperiod	450
 }
 
-item 0x2EE5
+item 0xa097
 {
 	name				limetree
 	script			harvest
@@ -404,9 +405,10 @@ item 0x2EE5
 	product			0x172a
 	maxamount			10
 	replenishperiod	450
+	OldObjtype 0x2ee5
 }
 
-item 0x2EE7
+item 0xa099
 {
 	name				limetreetop
 	script			harvest
@@ -415,9 +417,10 @@ item 0x2EE7
 	product			0x172a
 	maxamount			10
 	replenishperiod	450
+	OldObjtype 0x2ee7
 }
 
-item 0x2EEA
+item 0xa09a
 {
 	name				orangetree
 	script			harvest
@@ -426,9 +429,10 @@ item 0x2EEA
 	product			0xc807
 	maxamount			10
 	replenishperiod	450
+	OldObjtype 0x2eea
 }
 
-item 0x2EEC
+item 0xa09c
 {
 	name				orangetreetop
 	script			harvest
@@ -437,6 +441,7 @@ item 0x2EEC
 	product			0xc807
 	maxamount			10
 	replenishperiod	450
+	OldObjtype 0x2eec
 }
 
 
@@ -713,7 +718,7 @@ item 0xda07
 	graphic			0xF7F
 	script			seed
 	vendorsellsfor		50
-	plant			0x708e
+	plant			0x1708e
 	weight			1/10
 }
 
@@ -724,7 +729,7 @@ item 0xda08
 	graphic			0xF7F
 	script			seed
 	vendorsellsfor		50
-	plant			0x708f
+	plant			0x1708f
 	weight			1/10
 }
 
@@ -745,7 +750,7 @@ item 0xda0e
 	graphic			0xF7F
 	script			seed
 	vendorsellsfor		250
-	plant			0x70c0
+	plant			0x170c0
 	weight			1/10
 }
 
@@ -809,7 +814,7 @@ item 0xda0f
 	graphic			0xF7F
 	script			seed
 	vendorsellsfor		5000
-	plant			0x2EE1
+	plant			0xa096
 	weight			1/10
 }
 
@@ -820,8 +825,8 @@ item 0xda11
 	graphic			0xF7F
 	script			seed
 	vendorsellsfor		5000
-	plant			0x2EE5
-	planttop			0x2EE7
+	plant			0xa097
+	planttop			0xa099
 	weight			1/10
 }
 
@@ -832,8 +837,8 @@ item 0xda12
 	graphic			0xF7F
 	script			seed
 	vendorsellsfor		5000
-	plant			0x2EEA
-	planttop			0x2EEC
+	plant			0xa09a
+	planttop			0xa09c
 	weight			1/10
 }
 
