--- a/099/pkg/skills/craftingskills/cooking/cooking.cfg
+++ b/099/pkg/skills/craftingskills/cooking/cooking.cfg
@@ -1574,7 +1574,7 @@ recipe 83
 {
 	menu_name			giant cake
 	show_in_cookbook	3
-	product_objtype	0x28aa
+	product_objtype	0xa035
 	product_amount		1
 	product_name		cake: <longrenamable>
 	product_graphic
