--- a/trunk/099/pkg/skills/craftingskills/blacksmithy/blacksmithy.cfg
+++ b/trunk/099/pkg/skills/craftingskills/blacksmithy/blacksmithy.cfg
@@ -33,7 +33,7 @@ blacksmithy 0xB013
 //  Items just here for laminating
 ///////////////////
 
-blacksmithy 0x2878
+blacksmithy 0xa054
 {
 	name			a toy soldier
 	material		20
@@ -44,7 +44,7 @@ blacksmithy 0x2878
 	bulk_deed		0
 }
 
-blacksmithy 0x2879
+blacksmithy 0xa055
 {
 	name			a toy soldier
 	material		20
@@ -55,7 +55,7 @@ blacksmithy 0x2879
 	bulk_deed		0
 }
 
-blacksmithy 0x287a
+blacksmithy 0xa056
 {
 	name			a toy soldier
 	material		20
@@ -66,7 +66,7 @@ blacksmithy 0x287a
 	bulk_deed		0
 }
 
-blacksmithy 0x287b
+blacksmithy 0xa057
 {
 	name			a toy soldier
 	material		20
@@ -77,7 +77,7 @@ blacksmithy 0x287b
 	bulk_deed		0
 }
 
-blacksmithy 0x287c
+blacksmithy 0xa058
 {
 	name			a toy soldier
 	material		20
@@ -482,7 +482,7 @@ blacksmithy 0X13ee
 	bulk_deed		1
 }
 
-blacksmithy 0x708c
+blacksmithy 0x1708c
 {
 	Name			ringmail coif
 	material		15
@@ -549,7 +549,7 @@ blacksmithy 0x13bb
 	bulk_deed		1
 }
 
-blacksmithy 0x7066
+blacksmithy 0x17066
 { 
 	Name			chainmail gloves
 	material		20
