Lots of changes... - Updated config files for the new way POL handles multis. - Updated tiles.cfg for the new tiledata. - Added all of the new weapons, armors and shields. There are a few pieces of clothing and footwear yet to add. - Added Racial checks to equipitem and item_equip scripts to disallow gargoyles from wearing human equipment and viceversa. Only exceptions are human jewelry, wands and robes. - Continued updating the scripts for realm awareness. Much to go yet. - Added config files for elf and gargoyle starting equipment.

--- a/099/config/cmds.cfg
+++ b/099/config/cmds.cfg
@@ -53,12 +53,13 @@ CmdLevel Admin
 	DIR	pkg/commands/admin
 }
 
-CmdLevel Dev
+CmdLevel test
 {
 	DIR	pkg/commands/dev
 	DIR	pkg/commands/developer
 	DIR	pkg/commands/test
 
-	ALIAS	Test
+	ALIAS	Dev
 	ALIAS	Developer
+	ALIAS	dev
 }
