--- a/099/config/starteqp_garg.cfg
+++ b/099/config/starteqp_garg.cfg
@@ -9,7 +9,7 @@
 
 ForSkill all
 {
-	Item		Dagger			1		100
+	Item		GargishDagger			1		100
 	Item		Candle			1		100
 	Item		GreaterHealPotion	3		100
 } 
@@ -36,12 +36,12 @@ ForSkill Magery
 
 Forskill Swordsmanship
 {
-	Item		Longsword			1		100
+	Item		DreadSword			1		100
 }
 
 Forskill Macefighting
 {
-	Item		Mace				1		100
+	Item		DiscMace				1		100
 }
 
 Forskill Blacksmithy
@@ -58,12 +58,12 @@ Forskill Mining
 
 Forskill Parrying
 {
-	Item		KiteShield		1		100
+	Item		GargishKiteShield		1		100
 }
 
 Forskill Lumberjacking
 {
-	Item		Hatchet			1		100
+	Item		GargishAxe			1		100
 	Item		Log				10		100
 }
 
@@ -74,7 +74,7 @@ Forskill Tinkering
         
 Forskill Fencing
 {
-	Item		Kryss			1		100
+	Item		Shortblade			1		100
 }
 
 Forskill Carpentry
@@ -103,8 +103,7 @@ Forskill Lockpicking
 	Item		lockpicks			5		100
 }
 
-ForSkill Archery
+Forskill Throwing
 {
-	Item		Bow				1		100
-	Item		Arrow			50		100
+	Item		Cyclone			1		100
 }
