--- a/099/pkg/combat/armor/itemdesc.cfg
+++ b/099/pkg/combat/armor/itemdesc.cfg
@@ -3898,4 +3898,123 @@ Armor 0x4062
 	unequipscript	:combat:item_unequip
 }
 
+///////////////////
+// SHIELDS
+///////////////////
+
+Armor 0x4200
+{
+	Name			GargishWoodenShield
+	AR			12
+	VendorSellsFor	30
+	VendorBuysFor	10
+	MaxHP		104
+	blockcircle	1
+	Weight		2
+	script		:combat:equipitem
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+}
+
+Armor 0x4202
+{
+	Name			GargishSmallPlateShield
+	AR			12
+	VendorSellsFor	130
+	VendorBuysFor	45
+	MaxHP		104
+	blockcircle	1
+	Weight		2
+	script		:combat:equipitem
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+}
+
+Armor 0x4201
+{
+	Name			GargishKiteShield
+	AR			18
+	VendorSellsFor	70
+	VendorBuysFor	23
+	MaxHP		128
+	blockcircle	1
+	strrequired	60
+	Weight		3
+	script		:combat:equipitem
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+}
+
+Armor 0x4203
+{
+	Name			GargishMediumPlateShield
+	AR			18
+	VendorSellsFor	200
+	VendorBuysFor	67
+	MaxHP		160
+	blockcircle	1
+	strrequired	60
+	Weight		4
+	script		:combat:equipitem
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+}
+
+Armor 0x4204
+{
+	Name			GargishLargePlateShield
+	AR			25
+	VendorSellsFor	260
+	VendorBuysFor	100
+	MaxHP		240
+	blockcircle	1
+	strrequired	90
+	Weight		5
+	script		:combat:equipitem
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+}
+
+Armor 0x4205
+{
+	Name			GargishLargeStoneShield
+	AR			25
+	VendorSellsFor	260
+	VendorBuysFor	100
+	MaxHP		240
+	blockcircle	1
+	strrequired	90
+	Weight		5
+	script		:combat:equipitem
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+}
+
+Armor 0x422a
+{
+	Name			GargishOrdershield
+	AR			25
+	MaxHP		240
+	blockcircle	1
+	strrequired	90
+	Weight		5
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+	script		:virtue:virtueshield
+	blockcircle	1
+}
+
+Armor 0x4228
+{
+	Name			GargishChaosshield
+	AR			25
+	MaxHP		240
+	blockcircle	1
+	strrequired	90
+	Weight		5
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+	script		:virtue:virtueshield
+	blockcircle	1
+}
 
