--- a/099/config/starteqp_elf.cfg
+++ b/099/config/starteqp_elf.cfg
@@ -9,7 +9,7 @@
 
 ForSkill all
 {
-	Item		Dagger			1		100
+	Item		AssassinSpike			1		100
 	Item		Candle			1		100
 	Item		GreaterHealPotion	3		100
 } 
@@ -36,12 +36,12 @@ ForSkill Magery
 
 Forskill Swordsmanship
 {
-	Item		Longsword			1		100
+	Item		ElvenMachete		1		100
 }
 
 Forskill Macefighting
 {
-	Item		Mace				1		100
+	Item		DiamondMace		1		100
 }
 
 Forskill Blacksmithy
@@ -74,7 +74,7 @@ Forskill Tinkering
         
 Forskill Fencing
 {
-	Item		Kryss			1		100
+	Item		Spellblade			1		100
 }
 
 Forskill Carpentry
@@ -105,6 +105,6 @@ Forskill Lockpicking
 
 ForSkill Archery
 {
-	Item		Bow				1		100
-	Item		Arrow			50		100
+	Item		Longbow			1		100
+	Item		Arrow				50		100
 }
