--- a/trunk/099/config/cmds.cfg
+++ b/trunk/099/config/cmds.cfg
@@ -53,12 +53,13 @@ CmdLevel Admin
 	DIR	pkg/commands/admin
 }
 
-CmdLevel Dev
+CmdLevel test
 {
 	DIR	pkg/commands/dev
 	DIR	pkg/commands/developer
 	DIR	pkg/commands/test
 
-	ALIAS	Test
+	ALIAS	Dev
 	ALIAS	Developer
+	ALIAS	dev
 }
