--- a/trunk/099/config/servers.cfg
+++ b/trunk/099/config/servers.cfg
@@ -25,3 +25,10 @@ GameServer POL-LOCAL
 	Port	2593
 	IPMatch	127.0.0.1
 }
+
+GameServer WoD-PTS
+{
+	Name	WoD Public Test Server
+	IP	--ip--
+	Port	2593
+}
