--- a/trunk/099/pkg/connect/config/uoclient.cfg
+++ b/trunk/099/pkg/connect/config/uoclient.cfg
@@ -4,14 +4,9 @@ Protocol Protocol
 	MaxSkillID 57
 }
 
-Listener None
+Listener New
 {
 	Port		2593
-	Encryption	none
+	Encryption	7.0.15.1
 }
 
-Listener WoD
-{
-	Port		2594
-	Encryption	2.0.0b
-}
