--- a/trunk/099/pkg/combat/weapons/itemdesc.cfg
+++ b/trunk/099/pkg/combat/weapons/itemdesc.cfg
@@ -454,7 +454,7 @@ Weapon 0x13b9
 	HitSound		0x23C
 	MissSound		0x23A
 	Anim			0xD
-	MountedAnim	0x1D
+	MountedAnim	0x1A
 	VendorSellsFor	200
 	VendorBuysFor	80
 	blockcircle	1
@@ -478,7 +478,7 @@ Weapon 0xcdb9
 	HitSound		0x23C
 	MissSound		0x23A
 	Anim			0xD
-	MountedAnim	0x1D
+	MountedAnim	0x1A
 	blockcircle	1
 	TwoHanded		1
 	equipscript	:combat:item_equip
