Added proper support for player gargoyle animations.

--- a/099/pkg/combat/weapons/itemdesc.cfg
+++ b/099/pkg/combat/weapons/itemdesc.cfg
@@ -1101,8 +1101,8 @@ Weapon 0x1406
 	Attribute		Mace
 	HitSound		0x13C
 	MissSound		0x234
-	Anim			0xC
-	MountedAnim	0x1D
+	Anim			0xB
+	MountedAnim	0x1A
 	MaxHP		200
 	VendorSellsFor	200
 	VendorBuysFor	80
@@ -1119,8 +1119,8 @@ Weapon 0x0e85
 	Name			Pickaxe
 	Speed		23
 	Damage		6d6+3
-	Anim			0xC
-	MountedAnim	0x1D
+	Anim			0xB
+	MountedAnim	0x1A
 	Attribute		Mace
 	MaxHP		200
 	Script		:mining:mining
@@ -2498,8 +2498,8 @@ Weapon 0x48c4
 	Script		::bladed
 	HitSound		0x23C
 	MissSound		0x23A
-	Anim			0xD
-	MountedAnim	0x1D
+	Anim			0x9
+	MountedAnim	0x1A
 	VendorSellsFor	200
 	VendorBuysFor	80
 	blockcircle	1
