095 scripts: - Fix to etherial items checker. It now erases invalid ehterial items from the list. - Changed back so holiday items aren't saved. - Added a check to Spirit Speak so necro gravestones can't be contacted more than once within 2 minutes by the same character. - Removed Christmas Tree Deed and Christmas Gift function calls from the logon script.

--- a/095/pkg/items/decorations/itemdesc.cfg
+++ b/095/pkg/items/decorations/itemdesc.cfg
@@ -723,7 +723,7 @@ Item  0xB010
 	Color		1425
 	script		christmastreedeed
 	weight		1
-//	SaveOnExit	0
+	SaveOnExit	0
 }
 
 Item  0xB011
@@ -732,7 +732,7 @@ Item  0xB011
 	Desc			Christmas tree
 	Graphic		0x0cd7
 	weight		200
-//	SaveOnExit	0
+	SaveOnExit	0
 }
 
 Item  0xB012
@@ -1056,9 +1056,106 @@ Item 0x2882 //ghost cutout (halloween)
 	Weight			5
 }
 
+Item 0x2328 
+{
+	Name				snowmansouth
+	movable			1
+	Weight			10
+	SaveOnExit			0
+}
 
+Item 0x2329
+{
+	Name				snowmaneast
+	movable			1
+	Weight			10
+	SaveOnExit			0
+}
 
+Item 0x232e
+{
+	Name				snowflake
+	movable			1
+	Weight			1
+	SaveOnExit			0
+}
 
+Item 0x232f
+{
+	Name				coloredsnowflake
+	movable			1
+	Weight			1
+	SaveOnExit			0
+}
 
+Item 0x2330
+{
+	Name				redpoinsettia
+	movable			1
+	Weight			1
+	SaveOnExit			0
+}
 
+Item 0x2331
+{
+	Name				coloredpoinsettia
+	movable			1
+	Weight			1
+	SaveOnExit			0
+}
 
+Item 0x236e
+{
+	Name				holidaycandleeast
+	movable			1
+	Weight			1
+	SaveOnExit			0
+}
+
+Item 0x2371
+{
+	Name				holidaycandlesouth
+	movable			1
+	Weight			1
+	SaveOnExit			0
+}
+
+Item 0x2374
+{
+	Name				mistletoeeast
+	movable			1
+	Weight			1
+	SaveOnExit			0
+}
+
+Item 0x2375
+{
+	Name				mistletoesouth
+	movable			1
+	Weight			1
+	SaveOnExit			0
+}
+
+Item 0x2376
+{
+	Name				festivecactus
+	movable			1
+	Weight			1
+	SaveOnExit			0
+}
+
+Item 0x2377
+{
+	Name				snowytree
+	movable			1
+	Weight			1
+	SaveOnExit			0
+}
+
+Item 0x2378
+{
+	Name				decorativetopiary
+	movable			1
+	Weight			1
+	SaveOnExit			0
+}
